--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 <body>
-
+<h1>tronos</h1>
+<p>parrafo bonitio</p>
 </body>
 </html>
